tests/ui/invalid_arg.stderr
error: cannot find attribute `tokio_select` in this scope
 --> tests/ui/invalid_arg.rs:5:7
  |
5 |     #[tokio_select(not biased)]
  |       ^^^^^^^^^^^^
  |
note: `tokio_select` is imported here, but it is a function-like macro
 --> tests/ui/invalid_arg.rs:2:5
  |
2 | use better_tokio_select::tokio_select;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0004]: non-exhaustive patterns: type `()` is non-empty
 --> tests/ui/invalid_arg.rs:6:11
  |
6 |     match () {};
  |           ^^
  |
  = note: the matched value is of type `()`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
  |
6 ~     match () {
7 +         _ => todo!(),
8 ~     };
  |
